[package]
name = "carburantes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
clap = { version= "4.5.51", features = ["derive"] }
proc-macro2 = "1.0.103"
